<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip_is">Tip is:</string>
    <string name="tip_amount">tip amount</string>
    <string name="total_amount_hint">Enter total amount</string>
    <string name="USD_symbol">$</string>
    <string name="reset">Reset</string>

</resources>
